--- a/ppc_manager.html
+++ b/ppc_manager.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link rel="icon" href="img/favicon.ico">
 		<link rel="stylesheet" href="css/styles.css" type="text/css"/> 
 		<link rel="stylesheet" href="fonts/fonts.css">
 		<title>MyContainer</title>
@@ -16,7 +17,7 @@
 					</div>
 					<nav class="header_navigation">
 						<ul>
-							<li><a href="#">About</a></li>
+							<li><a href="index.html">About</a></li>
 							<li><a href="vacancies.html">Vacancies</a></li>
 							<li><a href="team.html">Team</a></li>
 							<li class="contact_us_triger"><a href="#">Contact us</a></li>
@@ -26,7 +27,7 @@
 				</div>
 				<nav class="header_navigation_mobile">
 					<ul>
-						<li><a href="#">About</a></li>
+						<li><a href="index.html">About</a></li>
 						<li><a href="vacancies.html">Vacancies</a></li>
 						<li><a href="team.html">Team</a></li>
 						<li class="contact_us_triger"><a href="#">Contact us</a></li>
@@ -79,44 +80,44 @@
 				<h2>More opened positions for your career</h2>
 				<div class="slider">
 					<div class="slide">
-						<p class="category">Customer Care</p>
-						<h3>SEO</h3>
-						<a href="#" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+						<p class="category">QA Automation</p>
+						<h3>Middle/Senior AQA Engineer</h3>
+						<a href="https://djinni.co/jobs/480723-middle-senior-aqa-engineer/" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
 					<div class="slide">
-						<p class="category">Customer Care</p>
-						<h3>Linkbuilder</h3>
-						<a href="#" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+						<p class="category">JavaScript</p>
+						<h3>Senior Front-end Developer (JavaScript)</h3>
+						<a href="https://djinni.co/jobs/412345-senior-front-end-developer-javascript-/" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
 					<div class="slide">
-						<p class="category">Customer Care</p>
-						<h3>SMM/ Community Manager</h3>
-						<a href="#" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+						<p class="category">DevOps</p>
+						<h3>Middle/Senior DevOps Engineer</h3>
+						<a href="https://djinni.co/jobs/480719-middle-senior-devops-engineer/" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
 					<div class="slide">
-						<p class="category">Customer Care</p>
-						<h3>Retention manager (b2c role)</h3>
-						<a href="#" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+						<p class="category">Other</p>
+						<h3>Legal Officer (crypto expertise)</h3>
+						<a href="https://djinni.co/jobs/476544-legal-officer-crypto-expertise-/" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
 					<div class="slide">
-						<p class="category">Customer Care</p>
-						<h3>SEO</h3>
-						<a href="#" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+						<p class="category">Other</p>
+						<h3>Legal Officer</h3>
+						<a href="https://djinni.co/jobs/475739-legal-officer/" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
 					<div class="slide">
-						<p class="category">Customer Care</p>
-						<h3>Linkbuilder</h3>
-						<a href="#" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+						<p class="category">Node.js</p>
+						<h3>Senior Back-End Developer (Node.js)</h3>
+						<a href="https://djinni.co/jobs/362670-senior-back-end-developer-node-js-/" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
 					<div class="slide">
-						<p class="category">Customer Care</p>
-						<h3>SMM/ Community Manager</h3>
-						<a href="#" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+						<p class="category">Other</p>
+						<h3>Smart Contract Developer/ Architect</h3>
+						<a href="https://djinni.co/jobs/389391-smart-contract-developer-architect/" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
 					<div class="slide">
-						<p class="category">Customer Care</p>
-						<h3>Retention manager (b2c role)</h3>
-						<a href="#" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
+						<p class="category">Flutter</p>
+						<h3>Senior React Native Developer</h3>
+						<a href="https://djinni.co/jobs/475698-senior-react-native-developer/" class="read_more">Read more<img src="img/arrow-right.svg" alt="arrow"></a>
 					</div>
 				</div>
 			</div>
@@ -141,66 +142,103 @@
 						<img src="img/logo_footer.svg" alt="MYCONTAINER">
 					</div>
 					<ul>
-						<li><a href="#">Privacy policy</a></li>
+						<li><a href="privacy_policy.html">Privacy policy</a></li>
 					</ul>
 				</div>
 			</div>
 		</footer>
+		<!-- cookie_modal -->
+		<div class="cookie_modal">
+			<h2>Hey, hey!</h2>
+			<p>We use cookies for some... you know... things. You can check them by the link below or just press that accept button, we don’t work with CIA anyway.</p>
+			<div class="btns_cookie">
+				<button class="accept_all">Accept all</button>
+				<a href="">Cookie Policy</a>
+			</div>
+		</div>
+		<!-- end cookie_modal -->
 		<!-- apply position modal --> 
 		<div class="apply_position_modal modal_window blue_bg">
 			<div class="wrap">
 				<h2>Apply to position</h2>
-				<button class="close"><img src="img/close-square.svg" alt="x"></button>
+				<button class="close"></button>
 				<form action="#">				
-					<input type="text" placeholder="Full name*" id="Name">
-					<p class="upload_file">
+					<div>
+						<input type="text" placeholder="Full name*" id="Name">
+						<label for="Name">Full name*</label>
+					</div>
+					<p class="upload_file  cv_file">
 						<label for="CVFile">Upload CV file*</label>
 						<input id="CVFile" type="file">
 					</p>
-					<p class="email_inpt">
-						<label for="Email">Email*</label>
+					<div>
 						<input type="email" placeholder="example@gmail.com" id="Email">
-					</p>
+						<label for="Email">Email*</label>
+					</div>
 					<p class="upload_file">
 						<label for="CoverLetter">Upload Cover Letter</label>
 						<input id="CoverLetter" type="file">
 					</p>
-					<input type="text" placeholder="Location*">
+					<div>
+						<input type="text" id="Location" placeholder="Location*">
+						<label for="Location">Location*</label>
+					</div>
 					<input type="submit" class="submit" value="Send">
 				</form>
+				<p class="required_fields_notice">*Required fields  /  Supported file formats .doc and .pdf</p>
 			</div>
 		</div>
 		<!-- end apply position modal --> 
 		<!-- join us modal window -->
 		<div class="join_us_modal modal_window blue_bg">
 			<div class="wrap">
-				<h2>Jooin us</h2>
-				<button class="close"><img src="img/close-square.svg" alt="x"></button>
+				<h2>Join us</h2>
+				<button class="close"></button>
 				<form action="#">
 					<div class="first_modal">						
-						<input type="text" placeholder="Full name*" id="Name">
-						<input type="text" placeholder="Desirable position*">
-						<p class="email_inpt">
-							<label for="Email">Email*</label>
-							<input type="email" placeholder="example@gmail.com" id="Email">
-						</p>
-						<input type="text" placeholder="Salary expectations*">
-						<input type="text" placeholder="Location*">
-						<input type="text" placeholder="Linkedin profile">
+						<div>
+							<input type="text" placeholder="Full name*" id="NameJoin">
+							<label for="NameJoin">Full name*</label>
+						</div>
+						<div>
+							<input type="text" placeholder="Desirable position*" id="PositionJoin">
+							<label for="PositionJoin">Desirable position*</label>
+						</div>
+						<div>
+							<input type="email" placeholder="example@gmail.com" id="EmailJoin">
+							<label for="EmailJoin">Email*</label>
+						</div>
+						<div>
+							<input type="text" placeholder="Salary expectations*" id="SalaryJoin">
+							<label for="SalaryJoin">Salary expectations*</label>
+						</div>
+						<div>
+							<input type="text" placeholder="Location*" id="LocationJoin">
+							<label for="LocationJoin">Location*</label>
+						</div>
+						<div>
+							<input type="text" placeholder="Linkedin profile" id="linkedin">
+							<label for="Linkedin">Linkedin profile</label>
+						</div>
 					</div>
 					<div class="second_modal">
-						<p class="upload_file">
-							<label for="CVFile">Upload CV file*</label>
-							<input id="CVFile" type="file">
+						<p class="upload_file  cv_file">
+							<label for="CVFileJoin">Upload CV file*</label>
+							<input id="CVFileJoin" type="file">
 						</p>
 						<p class="upload_file">
 							<label for="CoverLetter">Upload Cover Letter</label>
 							<input id="CoverLetter" type="file">
 						</p>
-						<textarea name="textarea" id="textarea"  placeholder="Comment"></textarea>
+						<div class="textarea_field">
+							<textarea name="textarea" id="textarea"  placeholder="Comment"></textarea>
+							<label for="textarea">Comment</label>
+						</div>
 					</div>
 					<input type="submit" class="submit" value="Submit">
 				</form>
+				<p class="required_fields_notice">*Required fields</p>
+				<p class="required_fields_notice join_us_second_notice">*Required fields  /  Supported file formats .doc and .pdf</p>
 				<button class="next_btn">Next step</button>
 				<button class="back_btn">Back</button>
 			</div>
@@ -210,16 +248,23 @@
 		<div class="contact_us_modal modal_window blue_bg">
 			<div class="wrap">
 				<h2>Contact us</h2>
-				<button class="close"><img src="img/close-square.svg" alt="x"></button>
+				<button class="close"></button>
 				<form action="#">
-					<input type="text" placeholder="Full name*" id="Name">
-					<p class="email_inpt">
-						<label for="Email">Email*</label>
-						<input type="email" placeholder="example@gmail.com" id="Email">
-					</p>
-					<textarea name="textarea" id="textarea"  placeholder="Comment"></textarea>
+					<div>
+						<input type="text" id="NameContact" placeholder="Full name*">
+						<label for="NameContact">Full name*</label>
+					</div>
+					<div>
+						<input type="email" id="EmailContact" placeholder="Email*">
+						<label for="EmailContact">Email*</label>
+					</div>
+					<div class="textarea_field">
+						<textarea name="textarea" id="textarea" placeholder="Comment"></textarea>
+						<label for="textarea">Comment</label>
+					</div>
 					<input type="submit" class="submit" value="Submit">
 				</form>
+				<p class="required_fields_notice">*Required fields</p>
 			</div>
 		</div>
 		<!-- end contact us modal window -->
