--- a/404.html
+++ b/404.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link rel="icon" href="img/favicon.ico">
 		<link rel="stylesheet" href="css/styles.css" type="text/css"/> 
 		<link rel="stylesheet" href="fonts/fonts.css">
 		<title>MyContainer</title>
