--- a/team.html
+++ b/team.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<link rel="icon" href="img/favicon.ico">
 		<link rel="stylesheet" href="css/styles.css" type="text/css"/> 
 		<link rel="stylesheet" href="fonts/fonts.css">
 		<title>MyContainer</title>
@@ -16,7 +17,7 @@
 					</div>
 					<nav class="header_navigation">
 						<ul>
-							<li><a href="#">About</a></li>
+							<li><a href="index.html">About</a></li>
 							<li><a href="vacancies.html">Vacancies</a></li>
 							<li><a href="team.html">Team</a></li>
 							<li class="contact_us_triger"><a href="#">Contact us</a></li>
@@ -26,7 +27,7 @@
 				</div>
 				<nav class="header_navigation_mobile">
 					<ul>
-						<li><a href="#">About</a></li>
+						<li><a href="index.html">About</a></li>
 						<li><a href="vacancies.html">Vacancies</a></li>
 						<li><a href="team.html">Team</a></li>
 						<li class="contact_us_triger"><a href="#">Contact us</a></li>
@@ -127,26 +128,6 @@
 				</div>
 				<div class="temate_data flex_container">
 					<div class="temate_photo">
-						<img src="img/Sergey.png" alt="Sergey">
-						<a href="">
-							<svg width="72" height="72" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M27 66H45C60 66 66 60 66 45V27C66 12 60 6 45 6H27C12 6 6 12 6 27V45C6 60 12 66 27 66Z" stroke="#008EFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-							<path class="in_hovered" d="M26.9048 31.5238V46H28.9048V31.5238H26.9048ZM34.3333 46V38.7619H32.3333V46H34.3333ZM45 38.7619V46H47V38.7619H45ZM47 38.7619C47 34.7118 43.7168 31.4286 39.6667 31.4286V33.4286C42.6122 33.4286 45 35.8164 45 38.7619H47ZM34.3333 38.7619C34.3333 35.8164 36.7211 33.4286 39.6667 33.4286V31.4286C35.6166 31.4286 32.3333 34.7118 32.3333 38.7619H34.3333ZM32.3333 31.5238V46H34.3333V31.5238H32.3333ZM27 28H28.8095V26H27V28Z" fill="#008EFF"/>
-							</svg>
-						</a>
-					</div>
-					<div class="temate_data_content">
-						<h2>Sergey Polonsky</h2>
-						<p class="work_posiition">VPofEngineeting</p>
-						<ul>
-							<li>Sergey spend 17 years in IT, evolving in the classic engineering career path (coder + admin + cybersecurity -> developer -> team lead -> architect / engineering manager / deputy CTO / CIO)</li>
-							<li>He likes to solve problems of any nature that interfere with achieving business results</li>
-							<li>Sergey has plenty of experience in delegating tasks, minimizing conflicts, developing engineering teams</li>
-						</ul>
-					</div>
-				</div>
-				<div class="temate_data flex_container">
-					<div class="temate_photo">
 						<img src="img/Rita.png" alt="Rita">
 						<a href="https://www.linkedin.com/in/rita-ilkiv-b1b909169/">
 							<svg width="72" height="72" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -162,51 +143,6 @@
 							<li>Over 5 years of experience with the primary expertise of building HR from scratch and recruiting in start-ups</li>
 							<li>Spent last three years specifically in the Blockchain/Crypto domain</li>
 							<li>Crypto enthusiast and strong technology believer</li>
-						</ul>
-					</div>
-				</div>
-				<div class="temate_data flex_container">
-					<div class="temate_photo">
-						<img src="img/Vladimir.png" alt="Vladimir">
-						<a href="">
-							<svg width="72" height="72" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M27 66H45C60 66 66 60 66 45V27C66 12 60 6 45 6H27C12 6 6 12 6 27V45C6 60 12 66 27 66Z" stroke="#008EFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-							<path class="in_hovered" d="M26.9048 31.5238V46H28.9048V31.5238H26.9048ZM34.3333 46V38.7619H32.3333V46H34.3333ZM45 38.7619V46H47V38.7619H45ZM47 38.7619C47 34.7118 43.7168 31.4286 39.6667 31.4286V33.4286C42.6122 33.4286 45 35.8164 45 38.7619H47ZM34.3333 38.7619C34.3333 35.8164 36.7211 33.4286 39.6667 33.4286V31.4286C35.6166 31.4286 32.3333 34.7118 32.3333 38.7619H34.3333ZM32.3333 31.5238V46H34.3333V31.5238H32.3333ZM27 28H28.8095V26H27V28Z" fill="#008EFF"/>
-							</svg>
-						</a>
-					</div>
-					<div class="temate_data_content">
-						<h2>Vladimir Krugliak</h2>
-						<p class="work_posiition">CMO</p>
-						<ul>
-							<li>4+ years in the EDU niche - USA, GB, and AU markets</li>
-							<li>4+ years in the IGaming niche - Tier-1 and Tier-2 markets</li>
-							<li>2+ years in the Crypto niche - Tier-1 and Tier-2 markets</li>
-							<li>Prefers to use Marketing 360' approaches in his work, as well as Growth hacks</li>
-							<li>Likes to mix innovative approaches with classical/basic technique</li>
-						</ul>
-					</div>
-				</div>
-				<div class="temate_data flex_container">
-					<div class="temate_photo">
-						<img src="img/Yuriy.png" alt="Yuriy">
-						<a href="">
-							<svg width="72" height="72" viewBox="0 0 72 72" fill="none" xmlns="http://www.w3.org/2000/svg">
-							<path d="M27 66H45C60 66 66 60 66 45V27C66 12 60 6 45 6H27C12 6 6 12 6 27V45C6 60 12 66 27 66Z" stroke="#008EFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-							<path class="in_hovered" d="M26.9048 31.5238V46H28.9048V31.5238H26.9048ZM34.3333 46V38.7619H32.3333V46H34.3333ZM45 38.7619V46H47V38.7619H45ZM47 38.7619C47 34.7118 43.7168 31.4286 39.6667 31.4286V33.4286C42.6122 33.4286 45 35.8164 45 38.7619H47ZM34.3333 38.7619C34.3333 35.8164 36.7211 33.4286 39.6667 33.4286V31.4286C35.6166 31.4286 32.3333 34.7118 32.3333 38.7619H34.3333ZM32.3333 31.5238V46H34.3333V31.5238H32.3333ZM27 28H28.8095V26H27V28Z" fill="#008EFF"/>
-							</svg>
-						</a>
-					</div>
-					<div class="temate_data_content">
-						<h2>Yuriy Romanyukha</h2>
-						<p class="work_posiition">Head of B2B Sales</p>
-						<ul>
-							<li>B2B Sales process automation and management in enterprise companies</li>
-							<li>15 years’ experience in B2B Sales with enterprise customers in NA, EU, APAC</li>
-							<li>Lecturer at Projector Institute and Kyiv School of Economics</li>
-							<li>B2B Mentor at Startup Wise Guys and ARIS</li>
-							<li>Responsible for team management of the sales and partnership departments </li>
-							<li>Studied at University of California, Berkeley, Haas Business School</li>
 						</ul>
 					</div>
 				</div>
@@ -276,36 +212,66 @@
 				</div>
 			</div>
 		</footer>
+		<!-- cookie_modal -->
+		<div class="cookie_modal">
+			<h2>Hey, hey!</h2>
+			<p>We use cookies for some... you know... things. You can check them by the link below or just press that accept button, we don’t work with CIA anyway.</p>
+			<div class="btns_cookie">
+				<button class="accept_all">Accept all</button>
+				<a href="">Cookie Policy</a>
+			</div>
+		</div>
+		<!-- end cookie_modal -->
 		<!-- join us modal window -->
 		<div class="join_us_modal modal_window blue_bg">
 			<div class="wrap">
-				<h2>Jooin us</h2>
-				<button class="close"><img src="img/close-square.svg" alt="x"></button>
+				<h2>Join us</h2>
+				<button class="close"></button>
 				<form action="#">
 					<div class="first_modal">						
-						<input type="text" placeholder="Full name*" id="Name">
-						<input type="text" placeholder="Desirable position*">
-						<p class="email_inpt">
-							<label for="Email">Email*</label>
-							<input type="email" placeholder="example@gmail.com" id="Email">
-						</p>
-						<input type="text" placeholder="Salary expectations*">
-						<input type="text" placeholder="Location*">
-						<input type="text" placeholder="Linkedin profile">
+						<div>
+							<input type="text" placeholder="Full name*" id="NameJoin">
+							<label for="NameJoin">Full name*</label>
+						</div>
+						<div>
+							<input type="text" placeholder="Desirable position*" id="PositionJoin">
+							<label for="PositionJoin">Desirable position*</label>
+						</div>
+						<div>
+							<input type="email" placeholder="example@gmail.com" id="EmailJoin">
+							<label for="EmailJoin">Email*</label>
+						</div>
+						<div>
+							<input type="text" placeholder="Salary expectations*" id="SalaryJoin">
+							<label for="SalaryJoin">Salary expectations*</label>
+						</div>
+						<div>
+							<input type="text" placeholder="Location*" id="LocationJoin">
+							<label for="LocationJoin">Location*</label>
+						</div>
+						<div>
+							<input type="text" placeholder="Linkedin profile" id="linkedin">
+							<label for="Linkedin">Linkedin profile</label>
+						</div>
 					</div>
 					<div class="second_modal">
-						<p class="upload_file">
-							<label for="CVFile">Upload CV file*</label>
-							<input id="CVFile" type="file">
+						<p class="upload_file  cv_file">
+							<label for="CVFileJoin">Upload CV file*</label>
+							<input id="CVFileJoin" type="file">
 						</p>
 						<p class="upload_file">
 							<label for="CoverLetter">Upload Cover Letter</label>
 							<input id="CoverLetter" type="file">
 						</p>
-						<textarea name="textarea" id="textarea"  placeholder="Comment"></textarea>
+						<div class="textarea_field">
+							<textarea name="textarea" id="textarea"  placeholder="Comment"></textarea>
+							<label for="textarea">Comment</label>
+						</div>
 					</div>
 					<input type="submit" class="submit" value="Submit">
 				</form>
+				<p class="required_fields_notice">*Required fields</p>
+				<p class="required_fields_notice join_us_second_notice">*Required fields  /  Supported file formats .doc and .pdf</p>
 				<button class="next_btn">Next step</button>
 				<button class="back_btn">Back</button>
 			</div>
@@ -315,16 +281,23 @@
 		<div class="contact_us_modal modal_window blue_bg">
 			<div class="wrap">
 				<h2>Contact us</h2>
-				<button class="close"><img src="img/close-square.svg" alt="x"></button>
+				<button class="close"></button>
 				<form action="#">
-					<input type="text" placeholder="Full name*" id="Name">
-					<p class="email_inpt">
-						<label for="Email">Email*</label>
-						<input type="email" placeholder="example@gmail.com" id="Email">
-					</p>
-					<textarea name="textarea" id="textarea"  placeholder="Comment"></textarea>
+					<div>
+						<input type="text" id="NameContact" placeholder="Full name*">
+						<label for="NameContact">Full name*</label>
+					</div>
+					<div>
+						<input type="email" id="EmailContact" placeholder="Email*">
+						<label for="EmailContact">Email*</label>
+					</div>
+					<div class="textarea_field">
+						<textarea name="textarea" id="textarea" placeholder="Comment"></textarea>
+						<label for="textarea">Comment</label>
+					</div>
 					<input type="submit" class="submit" value="Submit">
 				</form>
+				<p class="required_fields_notice">*Required fields</p>
 			</div>
 		</div>
 		<!-- end contact us modal window -->
