--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -121,6 +121,7 @@
 		<!-- end contact us modal window -->
 		<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script> 
 		<script type="text/javascript" src="js/main.js"></script>
-		<script src="js/jquery.bxslider.min.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/jquery.cookie.min.js"></script>
 	</body>
 </html>
