--- a/team.html
+++ b/team.html
@@ -37,7 +37,7 @@
 			<div class="header_content">
 				<div class="wrap">
 					<h1>Our team</h1>
-					<p>We are a team of 25. With our hands-on experience, we aim to continue building an excellent product for both individuals and businesses.</p>
+					<p>We are a team of 60 +. With our hands-on experience, we aim to continue building an excellent product for both individuals and businesses.</p>
 				</div>
 			</div>
 		</header>
@@ -121,8 +121,8 @@
 						<ul>
 							<li>Over 15 years of experience in IT infrastructure, virtualization, networks and associated services</li>
 							<li>Enthusiastic about the crypto space, electronics, mechatronics and photography</li>
-							<li>Travel soul and I like to be on the road</li>
-							<li>I’m a non-conformist person, fighting against inappropriate rules and things around me</li>
+							<li>IT Infrastructure and Cryptocurrency advisor</li>
+							<li>Managed infrastructure in crypto start-ups and big international  corporations</li>
 						</ul>
 					</div>
 				</div>
@@ -181,8 +181,11 @@
 						<p class="work_posiition">Team Lead of Customer Support</p>
 						<ul>
 							<li>The youngest team leader of customer support MyCointainer ever had.</li>
+							<li>4 years in the customer-related area</li>
+							<li>Started his career from a call center where he became a team leader after the first three months</li>
+							<li>Great experience in working with tech, finance & crypto companies delivering an exclusive experience to users and customers.</li>
+							<li>Here at MyCoinatiner, by leading the Support team we are building the best customer support squad to provide personalized assistance with a customer-first approach.</li>
 						</ul>
-						<p>My professional path in the customer-related area has longed for almost four years, starting from a call center where I became a team leader after my first three months to finally MyCointainer. My background comprises working with tech, finance & crypto companies delivering an exclusive experience to users and customers. <br>Here at MyCoinatiner, we’re trying to build the best customer support squad to provide personalized assistance with a customer-first approach.</p>
 					</div>
 				</div>
 			</div>
@@ -257,11 +260,11 @@
 					<div class="second_modal">
 						<p class="upload_file  cv_file">
 							<label for="CVFileJoin">Upload CV file*</label>
-							<input id="CVFileJoin" type="file">
+							<input id="CVFileJoin" type="file" accept=".doc, .pdf">
 						</p>
-						<p class="upload_file">
-							<label for="CoverLetter">Upload Cover Letter</label>
-							<input id="CoverLetter" type="file">
+						<p class="upload_file cover_letter">
+							<label for="CoverLetterJoin">Upload Cover Letter</label>
+							<input id="CoverLetterJoin" type="file" accept=".doc, .pdf">
 						</p>
 						<div class="textarea_field">
 							<textarea name="textarea" id="textarea"  placeholder="Comment"></textarea>
@@ -303,6 +306,7 @@
 		<!-- end contact us modal window -->
 		<script src="https://code.jquery.com/jquery-3.6.1.min.js"></script> 
 		<script type="text/javascript" src="js/main.js"></script>
-		<script src="js/jquery.bxslider.min.js"></script>
+		<script src="js/slick.min.js"></script>
+		<script src="js/jquery.cookie.min.js"></script>
 	</body>
 </html>
