--- a/ppc_manager_front_end.html
+++ b/ppc_manager_front_end.html
@@ -39,7 +39,6 @@
 				<div class="wrap">
 					<a href="#" class="back_btn" onclick="history.back();return false;"><img src="img/arrow-left.svg" alt="<">Back</a>
 					<h1>Senior Front-end Developer (JavaScript)</h1>
-					<p>We are currently looking for a PPC Specialist who will be involved in developing promotion strategy for the project.</p>
 					<a href="https://docs.google.com/forms/d/e/1FAIpQLSeYf1Sh9Tk2Pr80K1FtMoSDvtvP90Q9DPGOkoKcvanstxFyEQ/viewform?usp=sf_link">Apply now</a>
 					<!--<a class="apply_position_triger" href="#">Apply now</a>-->
 				</div>
@@ -140,7 +139,7 @@
 						<img src="img/logo_footer.svg" alt="MYCONTAINER">
 					</div>
 					<ul>
-						<li><a href="privacy_policy.html">Privacy policy</a></li>
+						<!--<li><a href="privacy_policy.html">Privacy policy</a></li> -->
 					</ul>
 				</div>
 			</div>
