--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 						<img src="img/logo_footer.svg" alt="MYCONTAINER">
 					</div>
 					<ul>
-						<li><a href="privacy_policy.html">Privacy policy</a></li>
+						<!--<li><a href="privacy_policy.html">Privacy policy</a></li> -->
 					</ul>
 				</div>
 			</div>
